syntax = "proto3";
package firmachain.contract;

import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "firmachain/contract/contract_file.proto";
import "firmachain/contract/contract_log.proto";

option go_package = "github.com/firmachain/firmachain/v05/x/contract/types";

// Query defines the gRPC querier service.
service Query {

	// Queries a list of isContractOwner items.
	rpc IsContractOwner(IsContractOwnerRequest) returns (IsContractOwnerResponse) {
		option (google.api.http).get = "/firmachain/firmachain/contract/isContractOwner";
	}

	// Queries a contractFile by index.
	rpc ContractFile(ContractFileRequest) returns (ContractFileResponse) {
		option (google.api.http).get = "/firmachain/firmachain/contract/contractFile/{index}";
	}

	// Queries a list of contractFile items.
	rpc ContractFileAll(ContractFileAllRequest) returns (ContractFileAllResponse) {
		option (google.api.http).get = "/firmachain/firmachain/contract/contractFile";
	}

	// Queries a contractLog by hash
	rpc GetContractListFromHash(GetContractListFromHashRequest) returns (GetContractListFromHashResponse) {
		option (google.api.http).get = "/firmachain/firmachain/contract/ContractListFromHash/{hash}";
	}

	// Queries a contractLog by id.
	rpc ContractLog(ContractLogRequest) returns (ContractLogResponse) {
		option (google.api.http).get = "/firmachain/firmachain/contract/contractLog/{id}";
	}

	// Queries a list of contractLog items.
	rpc ContractLogAll(ContractLogAllRequest) returns (ContractLogAllResponse) {
		option (google.api.http).get = "/firmachain/firmachain/contract/contractLog";
	}

}

// IsContractOwnerRequest
message IsContractOwnerRequest {
  string file_hash = 1;
  string owner_address = 2;
}

// IsContractOwnerResponse
message IsContractOwnerResponse {
  bool result = 1;
}

// ContractFileRequest
message ContractFileRequest {
	string index = 1;
}

// ContractFileResponse
message ContractFileResponse {
	ContractFile contract_file = 1;
}

// ContractFileAllRequest
message ContractFileAllRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

// ContractFileAllResponse
message ContractFileAllResponse {
	repeated ContractFile contract_file = 1;
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}
// ContractLogRequest
message ContractLogRequest {
	uint64 id = 1;
}

// GetContractListFromHashRequest
message GetContractListFromHashRequest {
	string hash = 1;
}

// ContractLogResponse
message ContractLogResponse {
	ContractLog contract_log = 1;
}

// GetContractListFromHashResponse
message GetContractListFromHashResponse {
	repeated uint64 id_list = 1;
}

// ContractLogAllRequest
message ContractLogAllRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

// ContractLogAllResponse
message ContractLogAllResponse {
	repeated ContractLog contract_log = 1;
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}
